Adding Login Page

--- a/gadz-it-offecial/public/index.html
+++ b/gadz-it-offecial/public/index.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
     <link rel="icon" type="image/svg+xml" href="./public/logo-1-1@2x.png" />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@400&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Khand:wght@500;600;700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;400;500;600&display=swap"
+    />
     
     <link
       rel="stylesheet"
