converting sidebar into a react element

--- a/gadz-it-offecial/public/index.html
+++ b/gadz-it-offecial/public/index.html
@@ -38,11 +38,19 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Khand:wght@700&display=swap"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/simplebar/dist/simplebar.min.css" 
+    />
+
+
     <title>GADZ'IT</title>
 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://unpkg.com/simplebar/dist/simplebar.min.js"></script>
     <div id="root"></div>
   </body>
 </html>
